# FUSION26_Watson

./: .gitignore  README.md  evaluation.py  pyproject.toml  sample.py
benchmarks/: BENCHMARKS.md  time_taken_for_various_kappa_values_(10000_samples).json  time_taken_for_various_kappa_values_log_scale_(10000_samples).json  time_taken_for_various_sample_counts_log_scale_(kappa=-10).json  time_taken_for_various_sample_counts_log_scale_(kappa=10).json
tests/: test_sample.py
util/: generators.py  watson_s2.py  watson_s3.py
